--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "dest": "./index.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "https://favoritecomputertech.netlify.app/"
+        "Access-Control-Allow-Origin": "*"
       }
     }
   ]
