--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "npm start": "node index.js"
+    "npm start": "node server.js",
+    "npm build": "node run build"
   },
   "author": "",
   "license": "ISC",
