--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ticketing-system-api",
   "version": "1.0.0",
   "description": "Backend for my ticketing system",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "npm start": "node server.js",
